# monkey-benchmark

./: .clang-format  .clang-tidy  .gitignore  BENCH.md  CMakeLists.txt  README.md  README.ru.md  bench_output.schema.json  monkey_benchmark.cpp
.github/workflows/: build.yml  tests.yml
src/: backend.h  counters.h  cpu_backend.cpp  cuda_backend.cu  cuda_stub.cpp  main.cpp  monkey.comp  philox.glsl  philox.h  prng.h  uint128.h  vulkan_backend.cpp  vulkan_stub.cpp  workload.cpp  workload.h  workload_extra.cpp  workload_extra.h  workload_monkey.cpp  workload_monkey.h
src/workloads/: bbp_kernel.h  miller_rabin_kernel.h  monkey_kernel.h
tests/: CMakeLists.txt  catch_main.cpp  philox_dump.comp  test_bbp.cpp  test_counters.cpp  test_cuda_philox.cu  test_glsl_philox.cpp  test_miller_rabin.cpp  test_philox.cpp  test_sanity.cpp  test_uint128.cpp  test_vulkan_philox.cpp  test_workload_monkey.cpp
